@@ -20,6 +20,7 @@
 
 =========================
 09/25
+	* Fixed item group 35 (lottobox) in item_misc.txt [Skotlex]
 	* Added Ninja/Gunslinger job exp as separate exp chart [Playtester]
 	* Immaterial Sword now has a 3% chance of reducing target's sp by 30% [Playtester]
 09/23
